# piece-identifier

./: README.md  package.xml  setup.cfg  setup.py
piece_identifier/: cobot_best.pt  piece_identifier.py  yolomodel.py
