<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>piece_identifier</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zachchampion79@gmail.com">zachc</maintainer>
  <license>GPL-3.0-only</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>cv2</depend>
  <depend>PIL</depend>
  <depend>numpy</depend>
  <depend>python3-ultralytics-pip</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
